k8s/devtools/code-server/code-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: devtools
spec:
  selector:
    app: code-server
  ports:
    - port: 8080
      targetPort: 8080
