k8s/devtools/code-server/code-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress
  namespace: devtools
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - your.domain.io
    secretName: code-server-tls 
  rules:
  - host: your.domain.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server
            port:
              number: 8080
